﻿- General:
	- Add a --tsv option to the n-choose-k parsing script to output a TSV file instead of a CSV file.
	- Tweaks to scroll-zoom prevention.
	- Exclude weapons from the bounds calculations as they sometimes give weird values (e.g., lasers when firing).
- AI / WM:
	- Fixes for Stationary surface vessel mode.
		- No longer panics, even if airborne (allows for floating/free-fall turrets).
		- Attitude control (using RCS and reaction wheels) is applied when an enemy is within the engagement range.
- Armor:
	- Fix stack overflow in ToggleScaleClamp for symmetric parts.
	- Further fixes for post-penetration bugs.
- Weapons:
	- Remove the extra delay from dropping the final countermeasure in a sequence.
- Spawning:
	- Allow a specific list of observers to be excluded from being removed during spawning and competitions.
	- Allow spawning custom templates with only 1 team if not immediately starting a competition.
	- Allow spawning non-valid craft via the custom spawn templates if not immediately starting a competition.
- RWP:
	- Fixes for remote orchestration.

v1.5.4.1
IMPROVEMENTS / FIXES
- General:
	- Fix a crash-to-desktop due to firing missiles with action groups but without a WM.
	- Add a 'recentlyFiring' property for CameraTools that checks all guns for having fired recently (instead of just the current one) and for having fired a missile recently. Make the camera vessel selection use this too.
	- Internal fixes for hull/armour/HP setup logic.
	- Fix Rocket and 25mm Ammo box HP.
- AI / WM:
	- Fix not finding the AI in the SPH for the AI GUI.
- Weapons:
	- Don't activate all engines on modular missiles when firing them, leave it up to the configured action groups.
	- 0 damage beam lasers will no longer cause battledamage.
	- Adjusts post-penetration calculations to prevent non-physical penetration/bullet mass adjustments. 
- Spawning:
	- Spawner will now spawn craft facing inwards if spawn distance is larger than competition distance.
- Armor/Hull: