@@ -400,7 +400,7 @@ namespace BDArmory.Utils
         static bool _originalScrollRateSet = false;
         public static void BeginDisableScrollZoom()
         {
-            if (!scrollZoomEnabled) return;
+            if (!scrollZoomEnabled || !BDArmorySettings.SCROLL_ZOOM_PREVENTION) return;
             if (!_originalScrollRateSet)
             {
                 originalScrollRate = GameSettings.AXIS_MOUSEWHEEL.primary.scale; // Get the original scroll rate once.
