@@ -2,6 +2,8 @@
 	- Add a --tsv option to the n-choose-k parsing script to output a TSV file instead of a CSV file.
 	- Tweaks to scroll-zoom prevention.
 	- Exclude weapons from the bounds calculations as they sometimes give weird values (e.g., lasers when firing).
+- UI:
+	- Add an option in the UI settings for disabling scroll-zoom prevention when over BDA windows.
 - AI / WM:
 	- Fixes for Stationary surface vessel mode.
 		- No longer panics, even if airborne (allows for floating/free-fall turrets).
@@ -11,6 +13,7 @@
 	- Further fixes for post-penetration bugs.
 - Weapons:
 	- Remove the extra delay from dropping the final countermeasure in a sequence.
+	- Add a custom fire keybinding to weapons that can be used to temporarily enable and fire weapons with keys other than the main firing key (request from forums).
 - Spawning:
 	- Allow a specific list of observers to be excluded from being removed during spawning and competitions.
 	- Allow spawning custom templates with only 1 team if not immediately starting a competition.
